--- a/css/main.css
+++ b/css/main.css
@@ -3,31 +3,40 @@ body {
     padding: 0px 10% 50px 10%;
 }
 
+
+/* Header styling */
 .main-title {
     font-size: 350%;
     text-align: center;
-    padding-left: 20%;
-    padding-right: 20%;
-    float: left;5:38 PM 1/26/2014
+    float: left;
+    margin-bottom: -20px;
+}
+.main-sub-title {
+    font-size: 200%;
+    text-align: center;
+    float:left;
+    width: 98%; /* Looked off-center below title text even when its not */
 }
 
-/* Header styling */
+header {
+    height: 80px;
+}
+
 header img {
     height: 80px;
     width: 100px;
     float: left;
+    margin-bottom: -20px;
+}
+header img.left-icon {
+    margin-left: 25%;
+    margin-right: 5%;
+}
+header img.right-icon {
+    margin-left: 5%;
+    margin-right: 25%;
 }
 
-
-img.banner {
-    height: 55px;
-    width: 50%;
-}
-
-.header-sub-title {
-    float:left;
-    clear:both;
-}
 
 /* Navbar styling */
 .navbar {
@@ -70,8 +79,8 @@ img.banner {
 
 /* Fonts */
 @font-face {
-    font-family: GreatVibes;
-    src: url(fonts/GreatVibes-Regular.tff);
+    font-family: 'GreatVibes';
+    src: url("../fonts/GreatVibes-Regular.ttf") format("truetype");
 }
 
 .wedding-font {
