--- a/css/main.css
+++ b/css/main.css
@@ -9,32 +9,26 @@ body {
     font-size: 350%;
     text-align: center;
     float: left;
-    margin-bottom: -20px;
+    width: 100%;
+    margin-bottom: -5px;
 }
 .main-sub-title {
     font-size: 200%;
     text-align: center;
     float:left;
+    line-height: 100%;
     width: 98%; /* Looked off-center below title text even when its not */
-}
-
-header {
-    height: 80px;
 }
 
 header img {
     height: 80px;
     width: 100px;
     float: left;
-    margin-bottom: -20px;
+    margin-top: 20px;
+    margin-bottom: -95px;
 }
 header img.left-icon {
-    margin-left: 25%;
-    margin-right: 5%;
-}
-header img.right-icon {
-    margin-left: 5%;
-    margin-right: 25%;
+    margin-left: 5px;
 }
 
 
