--- a/css/welcome.css
+++ b/css/welcome.css
@@ -17,7 +17,7 @@ html, body {
 
     min-width:100%;
     min-height:100%;
-    background:transparent url(../images/eg_bench.jpg) center center no-repeat;
+    background:transparent url(../images/eg_stoop.jpg) center center no-repeat;
     background-size:cover;
 }
 
@@ -25,7 +25,7 @@ html, body {
     position: relative;
     z-index: 2;
     left: -25%;
-    color: black;
+    color: white;
 }
 .title.main {
     font-size: 450%;
