--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body.content-container {
 /* Header styling */
 .main-title {
     font-size: 350%;
+    color: black;
 }
 header .main-title {
     text-align: center;
@@ -28,6 +29,7 @@ header .main-title {
     float:left;
     line-height: 100%;
     width: 98%; /* Looked off-center below title text even when its not */
+    color: black;
 }
 
 img.elephant-icon--small {
