--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,7 @@
 /* Bootstrap add-on styling */
 .center-col-9 {
-    position: relative;
-    left: 12.5%;
-    right: -12.5%;
+    padding-left: 12.5%;
+    padding-right: 12.5%;
 }
 
 /* Overall site styling */
@@ -11,25 +10,35 @@ body.content-container {
     padding: 0px 10% 50px 10%;
 }
 
+.overview-row {
+    padding-bottom: 50px;
+}
 
 /* Header styling */
+.main-title__container {
+    width: 100%;
+    text-align: center;
+}
+
+.main-title__container a {
+    text-decoration: none;
+}
+
 .main-title {
     font-size: 350%;
     color: black;
 }
 header .main-title {
     text-align: center;
-    float: left;
-    width: 100%;
-    margin-bottom: -5px;
 }
 .main-sub-title {
     font-size: 200%;
     text-align: center;
-    float:left;
     line-height: 100%;
-    width: 98%; /* Looked off-center below title text even when its not */
+    /*width: 98%;  Looked off-center below title text even when its not */
     color: black;
+    position: relative;
+    top: -10px;
 }
 
 img.elephant-icon--small {
@@ -69,7 +78,6 @@ img.elephant-icon--small {
 .navbar .navbar-nav {
     float: none;
     display: inline-block;
-    margin-right: 11rem;
     margin-bottom: -0.75rem;
 }
 
@@ -162,4 +170,25 @@ div.registry__container {
     height: 40px;
     width: 120px;
     border-radius: 5px;
+}
+
+/* Hotel Page styles */
+.hotel__info {
+    height: 225px;
+}
+
+.hotel__img {
+    height: 175px;
+    width: auto;
+    margin-bottom: 50px;
+}
+
+/* Gallery Page styles */
+.gallery__img {
+    width: 80%;
+    margin-left: 10%;
+}
+
+.gallery__description {
+    text-align: center;
 }
