--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,6 @@ header .main-title {
     font-size: 200%;
     text-align: center;
     line-height: 100%;
-    /*width: 98%;  Looked off-center below title text even when its not */
     color: black;
     position: relative;
     top: -10px;
@@ -83,9 +82,16 @@ img.elephant-icon--small {
     padding-right: 1.5rem;
 }
 
+.navbar-icon-xs {
+    vertical-align: middle;
+}
+
 .navbar .navbar-nav {
     float: none;
     display: inline-block;
+}
+
+#eg-navbar-default .navbar-nav {
     margin-bottom: -0.75rem;
 }
 
@@ -102,11 +108,29 @@ img.elephant-icon--small {
     padding-right: 0.5rem;
 }
 
-.navbar-default .navbar-nav > li > a {
+.navbar-nav .open .dropdown-menu > li > a.eg-menu-item {
+    color: #d33300; /* Dark Orange */
+}
+
+.navbar-default .navbar-nav > li > a,
+.navbar-default .navbar-nav > li > a:focus {
     color: #d33300; /* Dark Orange */
 }
 .navbar-default .navbar-nav > li > a:hover {
     color: #990066;
+}
+
+.navbar-default .navbar-nav>.open>a,
+.navbar-default .navbar-nav>.open>a:hover,
+.navbar-default .navbar-nav>.open>a:focus {
+    background: #ffddaa; /* Very Pale red */
+    color: #990066; /* Dark Purple */
+    border-color: #990066; /* Dark Purple */
+    border-radius: 8px;
+}
+
+.navbar-default .navbar-nav .open .dropdown-menu>li>a:hover {
+    color: #990066; /* Dark Purple */
 }
 
 .navbar-default .navbar-nav > li > a.selected {
