--- a/css/welcome.css
+++ b/css/welcome.css
@@ -17,7 +17,7 @@ html, body {
 
     min-width:100%;
     min-height:100%;
-    background:transparent url(../images/stoop_crop3.jpg) center center no-repeat;
+    background:transparent url(../images/eg_stoop.jpg) center center no-repeat;
     background-size:cover;
 }
 
