--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .wedding-row__element {
-    max-width: 50%;
+    /*max-width: 50%;*/
     min-width: 250px;
     text-align: center;
 }
@@ -7,6 +7,13 @@
     width: 100%;
 }
 */
+
+@media (min-width: 500px) {
+    .wedding-row__element {
+        max-width:50%;
+    }
+}
+
 .party-pic {
     width: 100%;
 }
