--- a/css/main.css
+++ b/css/main.css
@@ -233,14 +233,15 @@ img.elephant-icon--small {
 
 /* Registry Page styles */
 div.registry__container {
-    padding-left: 15px;
-    padding-right: 15px;
+    text-align: center;
 }
 
 .registry__icon {
-    height: 40px;
-    width: 120px;
+    height: auto;
+    width: 75%;
+    min-width: 120px;
     border-radius: 5px;
+    margin-bottom: 10px;
 }
 
 .registry__img {
